<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/master_view"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#666"
            android:id="@+id/divider_open_dialog" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/generic_button_selector"
                android:text="@string/copy_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:id="@+id/item_copy"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="0.1dp"
                android:background="#55000000"
                android:layout_margin="12dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@drawable/generic_button_selector"
                android:text="@string/share_button"
                android:id="@+id/item_share"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="0.1dp"
                android:layout_margin="12dp"
                android:background="#55000000"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@drawable/generic_button_selector"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/event_button"
                android:id="@+id/item_event"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <ListView
            android:id="@+id/item_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>